[gd_scene load_steps=9 format=2]

[ext_resource path="res://Games/Crafting/Shape.gd" type="Script" id=1]
[ext_resource path="res://assets/shape.png" type="Texture" id=2]
[ext_resource path="res://assets/hammer.png" type="Texture" id=3]
[ext_resource path="res://assets/hammer-shadow.png" type="Texture" id=4]
[ext_resource path="res://assets/mine/workshop.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.48541, 3.51022 )

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("hammer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5618, 3.98746 )

[node name="Shape" type="Node2D"]
script = ExtResource( 1 )

[node name="workshop" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Sword" type="Sprite" parent="."]
position = Vector2( 515.07, 398.209 )
texture = ExtResource( 2 )
hframes = 4

[node name="hammer" type="Sprite" parent="."]
position = Vector2( 354.156, 363.249 )
texture = ExtResource( 3 )
hframes = 4

[node name="Area2D" type="Area2D" parent="hammer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hammer/Area2D"]
position = Vector2( -0.6987, 14.7166 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/strike = SubResource( 2 )

[node name="LeftRightTween" type="Tween" parent="."]

[node name="UpDownTween" type="Tween" parent="."]

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 353.421, 414.683 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 1.32996, 0.388428 )
shape = SubResource( 3 )

[node name="hammer-shadow" type="Sprite" parent="HitArea"]
position = Vector2( 1.5361, 0.16864 )
texture = ExtResource( 4 )
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
